--- a/etc/config.json
+++ b/etc/config.json
@@ -1,8 +1,8 @@
 {
-  "apiPrefix": "http://localhost: 8080",
+  "apiPrefix": "http://localhost:8080",
   "serverPort": "8080",
   "db": {
-    "name": "notes",
+    "name": "notesdb",
     "host": "localhost",
     "port": 27017
   }
