--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "notes-spa",
   "version": "1.0.0",
   "description": "SPA (NodeJS, Express, MongoDB, React)",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,29 @@
   },
   "homepage": "https://github.com/Rokenor/SPA#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
+    "events": "^1.1.1",
     "express": "^4.15.2",
-    "mongoose": "^4.9.2"
+    "flux": "^3.1.2",
+    "keymirror": "^0.1.1",
+    "less": "^2.6.0",
+    "mongoose": "^4.9.2",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
+  },
+  "devDependencies": {
+    "babel": "5.x",
+    "babel-loader": "5.*",
+    "css-loader": "^0.22.0",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "less-loader": "^2.2.2",
+    "postcss-loader": "^1.3.3",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
