--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
     "events": "^1.1.1",
     "express": "^4.15.2",
     "flux": "^3.1.2",
@@ -27,7 +28,8 @@
     "less": "^2.6.0",
     "mongoose": "^4.9.2",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-masonry-component": "^5.0.3"
   },
   "devDependencies": {
     "babel": "5.x",
