--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "body-parser": "^1.17.1",
+    "classnames": "^2.2.5",
     "cors": "^2.8.3",
     "events": "^1.1.1",
     "express": "^4.15.2",
